--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -19,15 +19,44 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="24dp"/>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="24dp"
+        android:paddingTop="8dp"
+        android:layout_gravity="center_horizontal">
+
+        <TextView
+            android:id="@+id/tv_by_phone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="По номеру"
+            android:textSize="18sp"
+            android:layout_marginEnd="24dp"/>
+
+        <TextView
+            android:id="@+id/tv_by_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="По email"
+            android:textSize="18sp"
+            android:textColor="@color/purple_200"
+            />
+
+    </LinearLayout>
+
+
     <EditText
+        android:id="@+id/et_email"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:hint="Введите email"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:inputType="textEmailAddress"/>
 
     <EditText
+        android:id="@+id/et_password"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -35,6 +64,7 @@
         android:inputType="textPassword"/>
 
     <EditText
+        android:id="@+id/et_repeat_password"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -42,6 +72,7 @@
         android:inputType="textPassword"/>
 
     <Button
+        android:id="@+id/bt_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Зарегистрироваться"
