--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,27 +21,31 @@
         android:layout_marginTop="64dp"/>
 
     <EditText
-        android:layout_width="200dp"
+        android:id="@+id/et_login_email"
+        android:layout_width="205dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:hint="Введите email"
+        android:hint="Введите email/телефон"
         android:layout_marginTop="24dp"
         android:inputType="textEmailAddress"/>
 
     <EditText
-        android:layout_width="200dp"
+        android:id="@+id/et_login_password"
+        android:layout_width="205dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:hint="Введите пароль"
         android:inputType="textPassword"/>
 
     <CheckBox
+        android:id="@+id/cb_auto_enter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Входить автоматически"
         android:layout_gravity="center_horizontal"/>
 
     <Button
+        android:id="@+id/bt_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Войти"
